feat:替换掉弃用的API